openmediavault (0.6) stable; urgency=low

  * Adapt to Debian Wheezy.
  * Use rrdcached to reduce disk I/O of collectd.
  * Add ability to audit SMB/CIFS file operations per share.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 23 Nov 2013 19:41:31 +0100

openmediavault (0.5.41) stable; urgency=low

  * Mantis 0001006: Software update notification is disabled but still sent.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 14 Mar 2014 12:06:55 +0100

openmediavault (0.5.40) stable; urgency=low

  * Various code improvements.
  * Mantis 0001003: Typo in filesystemmgmt.inc.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 10 Mar 2014 23:30:43 +0100

openmediavault (0.5.39) stable; urgency=low

  * Update locales.
  * Improve S.M.A.R.T. WebGUI and RPC backend.
  * Imrove FileSystemMgmt::create RPC. No timeout should happen anymore
    when creating larger filesystems.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 04 Mar 2014 22:24:42 +0100

openmediavault (0.5.38) stable; urgency=low

  * Update locales.
  * Improve error logging.
  * Fix bug in the PHP storage backend S.M.A.R.T. detection.
  * Mantis 0000997: Fix bug in S.M.A.R.T. WebGUI which leads in a blank page
    after login.
  * Mantis 0000998: Modify rootfs mount options only if filesystem is EXT4.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 03 Mar 2014 00:09:14 +0100

openmediavault (0.5.37) stable; urgency=low

  * Mantis 0000990: Redirect permanent to https option for apache. Enable
    required rewrite module.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 02 Mar 2014 19:58:38 +0100

openmediavault (0.5.36) stable; urgency=low

  * Update locales.
  * Various improvements.
  * Add option to fix RRD database files in omv-firstaid.
  * Mantis 0000990: Redirect permanent to https option for apache.
  * Mantis 0000993: Groups with space not displayed correctly.
  * Mantis 0000995: Display extended S.M.A.R.T. information.
