@@ -32,11 +32,10 @@ OMV_SAMBA_SHARE_RECYCLE_REPOSITORY=${OMV_SAMBA_SHARE_RECYCLE_REPOSITORY:-".recyc
 OMV_SAMBA_SHARE_RECYCLE_CRONSCRIPT=${OMV_SAMBA_SHARE_RECYCLE_CRONSCRIPT:-"/etc/cron.daily/openmediavault-samba-recycle"}
 OMV_SAMBA_SHARE_RECYCLE_CRONSCRIPT_MASK=${OMV_SAMBA_SHARE_RECYCLE_CRONSCRIPT_MASK:-"755"}
 OMV_SAMBA_SHARE_RECYCLE_CRONSCRIPT_TEMPLATE=${OMV_SAMBA_SHARE_RECYCLE_CRONSCRIPT_TEMPLATE:-"samba-recycle-"}
-OMV_SAMBA_SHARE_RECYCLE_CRONSCRIPTS_DIR=${OMV_SAMBA_SHARE_RECYCLE_CRONSCRIPTS_DIR:-"/var/lib/openmediavault/cron.d"}
 
 # Create the rsync cron jobs. Each job is configured in a seperate script.
-mkdir -p ${OMV_SAMBA_SHARE_RECYCLE_CRONSCRIPTS_DIR}
-rm -f ${OMV_SAMBA_SHARE_RECYCLE_CRONSCRIPTS_DIR}/${OMV_SAMBA_SHARE_RECYCLE_CRONSCRIPT_TEMPLATE}*
+mkdir -p ${OMV_CRONSCRIPTS_DIR}
+rm -f ${OMV_CRONSCRIPTS_DIR}/${OMV_SAMBA_SHARE_RECYCLE_CRONSCRIPT_TEMPLATE}*
 
 [ "$(omv_config_get "//services/smb/enable")" = "0" ] && exit 0
 
@@ -49,7 +48,7 @@ xmlstarlet sel -t -m "//services/smb/shares/share[recyclebin='1']" \
 	  # Skip shared folders with recyclemaxage=0.
 	  [ "${recyclemaxage}" -eq "0" ] && continue
 
-	  filename="${OMV_SAMBA_SHARE_RECYCLE_CRONSCRIPTS_DIR}/${OMV_SAMBA_SHARE_RECYCLE_CRONSCRIPT_TEMPLATE}${uuid}"
+	  filename="${OMV_CRONSCRIPTS_DIR}/${OMV_SAMBA_SHARE_RECYCLE_CRONSCRIPT_TEMPLATE}${uuid}"
 	  runfile="/var/run/${OMV_SAMBA_SHARE_RECYCLE_CRONSCRIPT_TEMPLATE}${uuid}"
 	  sfpath=$(omv_get_sharedfolder_path "${sharedfolderref}")
 	  recyclerepository="${sfpath}/${OMV_SAMBA_SHARE_RECYCLE_REPOSITORY}"
@@ -59,13 +58,21 @@ xmlstarlet sel -t -m "//services/smb/shares/share[recyclebin='1']" \
 #!/bin/sh
 # This configuration file is auto-generated.
 # WARNING: Do not edit this file, your changes will be lost.
+amin=${amin}
+while getopts 'f' option
+do
+	case \${option} in
+	f) amin=1;; # Force deletion
+	esac
+done
 [ -e ${runfile} ] && exit 0
 trap "rm -f ${runfile}; exit" 0 1 2 5 15
 touch ${runfile}
 [ ! -e ${recyclerepository} ] && exit 0
-find ${recyclerepository} -mindepth 1 -amin +${amin} -print0 | xargs -0r rm -rf
+echo "Please wait, empty recyle bin of <$sfpath> ..."
+find ${recyclerepository} -mindepth 1 -amin +\${amin} -print0 | xargs -0r rm -rfv
 # Do a second run to remove empty directories.
-find ${recyclerepository} -mindepth 1 -type d -empty -print0 | xargs -0r rm -rf
+find ${recyclerepository} -mindepth 1 -type d -empty -print0 | xargs -0r rm -rfv
 EOF
 	  chmod ${OMV_SAMBA_SHARE_RECYCLE_CRONSCRIPT_MASK} ${filename}
   done
@@ -75,6 +82,6 @@ cat <<EOF > ${OMV_SAMBA_SHARE_RECYCLE_CRONSCRIPT}
 #!/bin/sh
 # This configuration file is auto-generated.
 # WARNING: Do not edit this file, your changes will be lost.
-run-parts --regex='${OMV_SAMBA_SHARE_RECYCLE_CRONSCRIPT_TEMPLATE}*' ${OMV_SAMBA_SHARE_RECYCLE_CRONSCRIPTS_DIR}
+run-parts --regex='${OMV_SAMBA_SHARE_RECYCLE_CRONSCRIPT_TEMPLATE}*' ${OMV_CRONSCRIPTS_DIR}
 EOF
 chmod 755 ${OMV_SAMBA_SHARE_RECYCLE_CRONSCRIPT}
